turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:2: error: not found: value state
state == 0;
^Turmite:22: error: not found: value state
	if(rule(state)(position) == 'R'){
                ^Turmite:30: error: not found: value state
	state = rule(state)(couleurSol);
        ^